Fix input box on mobile

--- a/src/style/input.less
+++ b/src/style/input.less
@@ -11,6 +11,19 @@
   }
   >input {
     flex: 1;
+
+    min-width: 0;
+    padding: 0.2em;
+
+    color: var(--key);
+    border: none;
+    border-radius: 4px;
+    outline: none;
+    background-color: transparent;
+    background-color: var(--comment-color);
+    box-shadow: 0 1px 3px rgba(0,0,0,0.2) inset, 0 1px 2px rgba(0,0,0,0.3) inset;
+
+    font-size: 1em;
   }
 }
 
@@ -33,30 +46,4 @@
 
   font-family: var(--font-family);
   font-size: 1em;
-}
-
-.makai-input {
-  padding: 0.2em;
-
-  color: var(--key);
-  border: none;
-  border-radius: 4px;
-  outline: none;
-  background-color: transparent;
-  background-color: var(--comment-color);
-  box-shadow: 0 1px 3px rgba(0,0,0,0.2) inset, 0 1px 2px rgba(0,0,0,0.3) inset;
-
-  font-size: 1em;
-}
-
-.makai-token {
-  width: 70%;
-
-  color: var(--key);
-
-//   border-width: 1.5px;
-  //   border-style: solid;
-  //   border-color: var(--key);
-  //   border-radius: 3px;
-  background-color: var(--comment-color);
 }
